<resources>
    <string name="app_name">Laminae</string>
    <string name="login_name">邮箱</string>
    <string name="login_password">密码</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="tourist">随便看看</string>
    <string name="login_tips">用户名或密码不能为空</string>
    <string name="url_register">http://huaban.com/</string>
    <string name="navigation_setting">设置</string>
    <string name="navgation_about">关于</string>
    <string name="navgation_exit">退出系统</string>
    <string name="navgation_user">我的</string>
    <string name="navgation_search">搜索</string>
    <string name="navgation_follow">关注</string>
    <string name="tmp">粉丝 %1$d 关注 %2$d</string>
    <string name="navigation_logout">退出当前账号</string>
    <string name="userneme_status">未登录</string>

    <plurals name="user_count">
        <item quantity="one">1 user</item>
        <item quantity="other">%1$d users</item>
    </plurals>


    <string name="action_settings">setting</string>

    <string name="snack_message_main_gather">start to gather</string>
    <string name="snack_message_not_notify">not new data</string>
    <string name="snack_message_login_success">login success</string>
    <string name="snack_message_net_error">network error please to check network</string>
    <string name="snack_message_timeout_error">time out please to check network</string>
    <string name="snack_message_password_error">This password is incorrect</string>
    <string name="snack_message_unknown_error">unknown error</string>
    <string name="snack_message_data_error">data error</string>
    <string name="snack_action_to_setting">Setting</string>
</resources>
