<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/startup_logo"
            android:id="@+id/nav_setting"
            android:title="@string/navigation_setting"/>
        <item
            android:icon="@drawable/startup_logo"
            android:id="@+id/nav_user"
            android:title="@string/navgation_user" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/startup_logo"
            android:id="@+id/nav_about"
            android:title="@string/navgation_about"/>
        <item
            android:icon="@drawable/startup_logo"
            android:id="@+id/nav_exit"
            android:title="@string/navgation_exit"/>
    </group>
</menu>