<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_linearlayout"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background">
    <ImageView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/startup_logo"/>

    <android.support.design.widget.TextInputLayout
        app:theme="@style/Login.TextInputLayout.textColor"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_left"
        android:layout_marginRight="@dimen/activity_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:textSize="18sp"
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:theme="@style/Login.TextInputLayout.textColor"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_margin_left"
        android:layout_marginRight="@dimen/activity_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:id="@+id/loginPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:textColor="@color/loginTextColor"
        style="?attr/borderlessButtonStyle"
        android:backgroundTint="@color/loginButtonBackground"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:background="?colorAccent"
        />

    <Button
        android:textColor="@color/loginTextColor"
        style="?attr/borderlessButtonStyle"
        android:backgroundTint="@color/loginButtonBackground"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:background="?colorAccent"
        />

</LinearLayout>